--- a/sanpham.html
+++ b/sanpham.html
@@ -27,7 +27,7 @@
 		<td colspan="4" rowspan="5">
 			<img src="images/sanpham_05.png" width="60" height="128" alt=""></td>
 		<td colspan="3" rowspan="2">
-			<a href="trangchu.html">
+			<a href="">
 				<img src="images/sanpham_06.png" width="115" height="54" border="0" alt=""></a></td>
 		<td colspan="10" rowspan="2">
 			<img src="images/sanpham_07.png" width="562" height="54" alt=""></td>
