--- a/dangki.html
+++ b/dangki.html
@@ -38,7 +38,7 @@
 		<td colspan="2" rowspan="4">
 			<img src="images/dangki_08.png" width="40" height="129" alt=""></td>
 		<td colspan="3">
-			<a href="trangchu.html">
+			<a href="">
 				<img src="images/dangki_09.png" width="153" height="54" border="0" alt=""></a></td>
 		<td colspan="11">
 			<img src="images/dangki_10.png" width="559" height="54" alt=""></td>
